fix(ui): improve snackbar, buttons, scrollbar, and mixins
Enhanced snackbar component with icon support and positioning options.Added new button styles and
variants for improved UI.Renamed scrollbar-hidden class to scrollbar-none for clarity.Separated
scrollbar functionality into scrollbar-none and scrollbar-hidden mixins.

--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -24,13 +24,20 @@
     @include scrollbar;
 }
 
-.scrollbar-hidden {
+.scrollbar-none {
     overflow: hidden;
     height: 100vh; /* Optional: Prevents content shift */
     touch-action: none; /* Disables touch scrolling */
     -ms-overflow-style: none; /* Hide scrollbar in IE and Edge */
     scrollbar-width: none; /* Hide scrollbar in Firefox */
     @include scrollbar;
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
+
+.scrollbar-hidden {
+@include scrollbar;
     &::-webkit-scrollbar {
         display: none;
     }
